[string freeze exception] Fix a crash when trying to clear scrapad while it is busy

BUG:488800